# teste

./: README.md
src/data_app/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/data_app/app/: Dockerfile  app.py  pyproject.toml
src/data_app/app/client/: Dockerfile  app.py
src/data_app/app/controllers/: cross_sell_controller.py  ingestion_controller.py  margin_controller.py  pipeline_controller.py  substitutes_controller.py  view_controller.py
src/data_app/app/services/: clickhouse_client_service.py  cron_service.py  cross_sell.py  data_processing.py  data_processing_service.py  logging_service.py  minio_client_service.py  pipeline_service.py  profit_margin.py  s3_client_service.py  substitutes_service.py  utils.py  utils_service.py
src/data_app/app/sql/: create_view_cost.sql  create_view_margin.sql  create_view_price.sql  create_view_product.sql  create_view_remuneracao_gerente.sql  create_view_store_regions.sql  create_view_substitutes.sql  create_working.sql
src/data_app/app/tests/: analise_estatica.py  clickhouse_client_test.py  data_processing_test.py  s3_client_test.py  teste_carga_pipeline.js  teste_carga_view.js  teste_integracao.py  utils_test.py
src/data_app/client/: Home.py  app.py
src/data_app/client/auth/: auth.py
src/data_app/client/pages/: Cost.py  CrossSell.py  Margin.py  Price.py  Region.py  Remuneracao.py  Substitutes.py
src/data_app/client/services/: cross_sell_service.py  get_product_by_margin.py  margin_service.py  subs_service.py  view_service.py
src/data_app/config/: clickhouse-users.xml
(+18 files in other folders)
